syntax="proto3";
package rental.v1;
option go_package="coolcar/server/rental/api/gen/v1;rentalpb";

message Location {
    double latitude = 1;
    double longitude = 2;
}

message LocationStatus {
    Location location = 1;
    int32 fee_cent = 2;
    double km_driven = 3;  // 行驶路程
    string poi_name = 4;  // 地点详情
}

// 行程状态
enum TripStatus {
    TS_NOT_SPECIFIED = 0;
    IN_PROGRESS = 1;
    FINISHED = 2;
}

message Trip {
    string account_id = 1;
    string car_id = 2;
    LocationStatus start = 3;
    LocationStatus current = 4;  // 当前行驶状态
    LocationStatus end = 5;
    TripStatus status = 6;
}

message TripEntity {
    string id = 1;
    Trip trip = 2;
}

message CreateTripRequest {
    LocationStatus start = 1;
    string car_id = 2;
}

message GetTripRequest {
    string id = 1;
}

message GetTripsRequest {
    TripStatus status = 1;  // 根据状态查行程
}

message GetTripsResponse {
    repeated TripEntity trips = 1;
}

message UpdateTripRequest {
    string id = 1;
    LocationStatus current = 2;
    bool end_trip = 3;  // 是否结束行程，其他的值都通过计算获得
}

service TripService {
    rpc CreateTrip (CreateTripRequest) returns (TripEntity);
    rpc GetTrip (GetTripRequest) returns (TripEntity);
    rpc GetTrips (GetTripsRequest) returns (GetTripsResponse);
    rpc UpdateTrip (UpdateTripRequest) returns (GetTripsResponse);
}

// Profile Service
enum Gender {
    G_NOT_SPECIFIED = 0;
    MALE = 1;
    FEMALE = 2;
}

enum IdentityStatus {
    UNSUBMITTED = 0;
    PENDING = 1;
    VERIFIED = 2;
}

message Profile {
    Identity identity = 1;
    IdentityStatus identity_status = 2;
}

message Identity {
    string lic_number = 1;
    string name = 2;
    Gender gender = 3;
    int64 birth_date_millis = 4;
}

message GetProfileRequest {}
message ClearProfileRequest {}

service ProfileService {
    rpc GetProfile (GetProfileRequest) returns (Profile);
    rpc SubmitProfile (Identity) returns (Profile);
    rpc ClearProfile (ClearProfileRequest) returns (Profile);
}
